--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
       <div class=" mt-3 container">
         <hr/>
-        <p class="text-center mt-3">Scandiweb Task assignment</p>
+        <p class="text-center mt-3">Scandiweb Test assignment</p>
       </div>
     <script type="text/javascript" src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
